--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,16 +24,36 @@
             android:textSize="25sp"
             tools:ignore="TextContrastCheck" />
 
-        <!-- Albums header -->
-        <TextView
+        <!-- Albums header with search button -->
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="@color/aliceBlue"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center"
-            android:text="@string/albums"
-            android:textColor="@android:color/black"
-            android:textSize="22sp" />
+            android:background="@color/aliceBlue">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="16dp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center_vertical"
+                android:text="@string/albums"
+                android:textColor="@android:color/black"
+                android:textSize="22sp" />
+
+            <Button
+                android:id="@+id/btnSearchByTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="16dp"
+                android:text="@string/search_by_tag"
+                android:drawableStart="@android:drawable/ic_menu_search"
+                android:drawablePadding="8dp"
+                tools:ignore="RelativeOverlap" />
+        </RelativeLayout>
 
         <!-- Album list -->
         <androidx.recyclerview.widget.RecyclerView
